[package]
authors = ["Sam Scott <me@samjs.co.uk>"]
categories = ["encoding"]
description = "Serde deserializer for Modular Crypt Format (MCF)"
documentation = "https://docs.rs/serde_mcf"
license = "MIT/Apache-2.0"
name = "serde_mcf"
readme = "README.md"
repository = "https://github.com/libpasta/serde_mcf"
version = "0.1.3"


[dependencies]
data-encoding = "2.0"
error-chain = "0.12"
lazy_static = "1.0"
serde = "1.0"
serde_bytes = "0.11"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
